# This is a dummy Makefile.am to get automake work flawlessly,
# and also cooperate to make a distribution for `make dist'

EXTRA_DIST = Makefile.linux Makefile.sun4 Makefile.svr4 Makefile.xenix \
 config.h.linux config.h.sun4 config.h.svr4 config.h.xenix \
 orig-config.h pwconv.8 pwconv-old.8 pwconv-old.c pwd.h.m4 \
 pwunconv.8 pwunconv-old.8 pwunconv-old.c scologin.c vipw.8
