# This is a dummy Makefile.am to get automake work flawlessly,
# and also cooperate to make a distribution for `make dist'

EXTRA_DIST = README shadow-utils.spec shadow-utils.spec.in \
 shadow-970616-fix.patch shadow-970616-glibc.patch \
 shadow-970616-rh.patch shadow-970616-utuser.patch \
 shadow-970616.login.defs shadow-970616.useradd \
 shadow-utils-970616.spec
