
mandir = @mandir@/es

man_MANS = 

# These Spanish manpages are outdated.
# Please contact pkg-shadow-devel@lists.alioth.debian.org if you wish to
# provide updates.
#	man1/login.1 \
#	man1/newgrp.1 \
#	man1/passwd.1 \
#	man5/passwd.5 \
#	man1/su.1 \
#	man8/vigr.8 \
#	man8/vipw.8

EXTRA_DIST = $(man_MANS)
