
mandir = @mandir@/it

# Links to missing pages:
#	grpconv.8 \
#	grpunconv.8 \
#	pwunconv.8 \
man_MANS = \
	chage.1 \
	chfn.1 \
	chpasswd.8 \
	chsh.1 \
	expiry.1 \
	faillog.5 \
	faillog.8 \
	getspnam.3 \
	groups.1 \
	grpck.8 \
	id.1 \
	lastlog.8 \
	login.1 \
	logoutd.8 \
	newgrp.1 \
	porttime.5 \
	pwck.8 \
	sg.1 \
	shadow.3 \
	shadow.5 \
	shadowconfig.8 \
	su.1 \
	vigr.8 \
	vipw.8

EXTRA_DIST = $(man_MANS)
 
