
mandir = @mandir@/ja

man_MANS = \
	chage.1 \
	chfn.1 \
	chsh.1 \
	gpasswd.1 \
	login.1 \
	newgrp.1 \
	passwd.1 \
	su.1 \
	shadow.3 \
	faillog.5 \
	login.access.5 \
	login.defs.5 \
	passwd.5 \
	porttime.5 \
	shadow.5 \
	suauth.5 \
        chpasswd.8 \
	faillog.8 \
	groupadd.8 \
	groupdel.8 \
	groupmod.8 \
	grpck.8 \
	lastlog.8 \
	logoutd.8 \
	mkpasswd.8 \
	pwck.8 \
	pwconv.8 \
	userdel.8 \
	usermod.8

EXTRA_DIST = $(man_MANS) \
	pw_auth.3 pwauth.8 sulogin.8 dpasswd.8
