
mandir = @mandir@/pl

man_MANS = \
	chage.1 \
	chfn.1 \
	chsh.1 \
	groups.1 \
	gpasswd.1 \
	id.1 \
	login.1 \
	newgrp.1 \
	passwd.1 \
	su.1 \
	pw_auth.3 \
	shadow.3 \
	d_passwd.5 \
	dialups.5 \
	faillog.5 \
	limits.5 \
	login.access.5 \
	login.defs.5 \
	passwd.5 \
	porttime.5 \
	shadow.5 \
	suauth.5 \
	adduser.8 \
        chpasswd.8 \
        dpasswd.8 \
	faillog.8 \
	groupadd.8 \
	groupdel.8 \
	groupmod.8 \
	grpconv.8 \
	grpunconv.8 \
	grpck.8 \
	lastlog.8 \
	logoutd.8 \
	mkpasswd.8 \
	newusers.8 \
	pwauth.8 \
	pwck.8 \
	pwconv.8 \
	pwunconv.8 \
	shadowconfig.8 \
	sulogin.8 \
	useradd.8 \
	userdel.8 \
	usermod.8 \
	vipw.8
