AUTOMAKE_OPTIONS = 1.0 foreign

manpldir = $(mandir)/pl
manpl1dir = $(manpldir)/man1
manpl3dir = $(manpldir)/man3
manpl5dir = $(manpldir)/man5
manpl8dir = $(manpldir)/man8


manpl1_DATA = \
	chage.1 \
	chfn.1 \
	chsh.1 \
	groups.1 \
	gpasswd.1 \
	id.1 \
	login.1 \
	newgrp.1 \
	passwd.1 \
	su.1 
	
manpl3_DATA = \
	pw_auth.3 \
	shadow.3

manpl5_DATA = \
	d_passwd.5 \
	dialups.5 \
	faillog.5 \
	limits.5 \
	login.access.5 \
	login.defs.5 \
	passwd.5 \
	porttime.5 \
	shadow.5 \
	suauth.5

manpl8_DATA = \
        chpasswd.8 \
        dpasswd.8 \
	faillog.8 \
	groupadd.8 \
	groupdel.8 \
	groupmod.8 \
	grpck.8 \
	lastlog.8 \
	logoutd.8 \
	mkpasswd.8 \
	newusers.8 \
	pwauth.8 \
	pwck.8 \
	pwconv.8 \
	shadowconfig.8 \
	sulogin.8
	useradd.8 \
	userdel.8 \
	usermod.8 \
	vipw.8

EXTRA_DIST = $(manpl1_DATA) $(manpl3_DATA) $(manpl5_DATA) $(manpl8_DATA)
